[package]
name = "rust-api-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
sea-query = { version = "^0", features = ["derive", "postgres"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
mobc-postgres = { version = "0.7.0", features = ["with-chrono-0_4"] }
mobc = "0.7.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.0"