[package]
name = "rust-api-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Base
## Async runtime
tokio = { version = "1", features = ["full"] }
## Web engine
axum = { version = "0.5.15", features = ["headers"] }

# For error creation
thiserror = "1.0.31"

# For json serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# DB
## Query building
sea-query = { version = "^0", features = ["derive", "postgres"] }
## For connection pool
mobc = "0.7.0"
### includes async engine for postgres
mobc-postgres = { version = "0.7.0", features = ["with-chrono-0_4"] }

# Config parsing
toml = "0.5.9"

# Command line arguments parsing
clap = { version = "3.0.0", features = ["derive"] }

# Logging
simplelog = { version = "0.12.0", features = ["termcolor"] }
log = "0.4.0"

# signature
signature = { version = "1.5.0", features = ["std"] }
ecdsa = { version = "0.14.3", features = ["verify", "sign"] }
k256 = { version = "0.11.3", features = ["ecdsa", "sha256"] }
elliptic-curve = "0.12.3"

# other
rand = "0.8.5"
base64 = "0.13.0"
sha3 = "0.10.2"
