[package]
name = "tweeter-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
gloo-net = "0.2.3"
wasm-bindgen-futures = "0.4.32"
serde = { version = "1.0", features = ["derive"] }
tweeter-schemas = { path = "../tweeter-schemas", version = "0.1" }
