[package]
name = "tweeter-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Base
## Async runtime
tokio = { version = "1", features = ["full"] }
## Web engine
axum = { version = "0.5.15", features = ["headers", "multipart"] }

# For error creation
thiserror = "1.0.31"

# For json serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# DB
## Query building
sea-query = { version = "^0", features = ["sqlx-postgres", "postgres"] }
## database driver
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }

validator = { version = "0.16", features = ["derive"] }

# Config parsing
toml = "0.5.9"

# Command line arguments parsing
clap = { version = "4.0.15", features = ["derive"] }

# Logging
simplelog = { version = "0.12.0", features = ["termcolor"] }
log = "0.4.0"

# signature
signature = { version = "1.5.0", features = ["std"] }
ecdsa = { version = "0.14.3", features = ["verify", "sign"] }
k256 = { version = "0.11.3", features = ["ecdsa", "sha256"] }
elliptic-curve = "0.12.3"

# other
rand = "0.8.5"
bs58 = "0.4.0"
sha3 = "0.10.2"

# storage for images
rust-s3 = { default-features = false, version = "0.32.3", features = [ "tokio-rustls-tls", "with-tokio" ] }

# Internal dependecies
tweeter-schemas = { path = "../../crates/tweeter-schemas", version = "0.1" }
tweeter-models = { path = "../../crates/tweeter-models", version = "0.1", features = [ "sqlx" ] }
tweeter-repos = { path = "../../crates/tweeter-repos", version = "0.1" }
tweeter-auth = { path = "../../crates/tweeter-auth", version = "0.1"}
tweeter-config = { path = "../../crates/tweeter-config", version = "0.1"}
