[package]
name = "tweeter-web"
authors = ["Velnbur"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
log = "0.4.6"
wasm-logger = "0.2.0"
const_format = "0.2.26"
serde_json = { version = "1.0", features = ["std"] }

tweeter-schemas = { path = "../../crates/tweeter-schemas", version = "0.1" }
tweeter-models = { path = "../../crates/tweeter-models", version = "0.1" }

yew = "0.19.3"
yew-router = "0.16.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize", "std"] }
wasm-bindgen-futures = "0.4"
gloo-utils = "0.1"

yewdux = "0.8.2"

url = { version = "2.2.2", features = ["serde"] }
serde_qs = "0.10.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]
