[package]
name = "tweeter-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
simplelog = { version = "0.12.0", features = ["termcolor"] }
log = "0.4.0"
async-trait = "0.1.57"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
lapin = "2.1.1"
tokio-reactor-trait = "1.1.0"
tokio-executor-trait = "2.0.1"

tweeter-mq = { version = "0.1.0", path = "../tweeter-mq" }