[package]
name = "tweeter-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["postgres"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
sqlx = ["dep:sqlx"]
serde = ["dep:serde"]
