[package]
name = "tweeter-mq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
lapin = { version = "2.1.1", features = ["rustls", "codegen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.31"
log = "0.4.0"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }
tokio-reactor-trait = "1.1.0"
tokio-executor-trait = "2.0.1"