[package]
name = "tweeter-schemas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
serde = { version = "1.0", features = ["derive"] }

lazy_static = "1.4.0"
regex = "1"

validator = { version = "0.16", features = ["derive"] }

tweeter-models = { path = "../tweeter-models", version = "0.1" }
